--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -26,6 +26,14 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
+    implementation('com.journeyapps:zxing-android-embedded:3.4.0') {
+        exclude group: 'com.android.support'
+        exclude module: 'appcompat-v7'
+        exclude module: 'support-v4'
+    }
+    implementation 'com.google.zxing:core:3.2.1'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.jetbrains:annotations-java5:15.0'
